@@ -98,6 +98,17 @@ void K3bDvdJob::start()
   emit started();
   emit newTask( i18n("Preparing data") );
 
+  m_doc->prepareFilenames();
+  if( m_doc->needToCutFilenames() ) {
+    if( !questionYesNo( i18n("Some filenames need to be shortened due to the %1 char restriction "
+			     "of the Joliet extensions. Continue anyway?")
+			.arg( m_doc->isoOptions().jolietLong() ? 103 : 64 ) ) ) {
+      emit canceled();
+      emit finished( false );
+      return;
+    }
+  }
+
   m_canceled = false;
   m_writingStarted = false;
   d->copies = m_doc->copies();
@@ -772,6 +783,12 @@ QString K3bDvdJob::jobDetails() const
   else
     return i18n("ISO9660 Filesystem (Size: %1)")
       .arg(KIO::convertSize( m_doc->size() ));
+}
+
+
+bool K3bDvdJob::hasBeenCanceled() const
+{
+  return m_canceled;
 }
 
 #include "k3bdvdjob.moc"
